@@ -1,0 +1,3 @@
+<div align="center">
+{include file=modules/mod-login_box.tpl}
+</div>
